// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exporters.css × draw-fill > illustrator-classes.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-fjvjft" role="img" aria-label="Logo"><style>
.sk-fjvjft-0 {
  stroke-dasharray: 1 1;
  animation: sk-fjvjft-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
.sk-fjvjft-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-fjvjft-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
.sk-fjvjft-2 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  animation: sk-fjvjft-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
@keyframes sk-fjvjft-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-fjvjft * {
    animation: none;
  }
  .sk-fjvjft-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-fjvjft-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-fjvjft-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" class="sk-fjvjft-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-fjvjft-1"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10" pathLength="1" class="sk-fjvjft-1"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" class="sk-fjvjft-0"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-fjvjft-2"/></svg>
"
`;

exports[`exporters.css × draw-fill > simple-stroke.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-1ek2zig" role="img" aria-label="Logo"><style>
.sk-1ek2zig-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-1ek2zig-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
@keyframes sk-1ek2zig-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1ek2zig * {
    animation: none;
  }
  .sk-1ek2zig-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" pathLength="1" class="sk-1ek2zig-0"/><path d="M36 64 L56 84 L88 40" pathLength="1" class="sk-1ek2zig-0"/></g></svg>
"
`;

exports[`exporters.css × every preset > comet × illustrator-classes.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-1d0hoyi" role="img" aria-label="Logo"><style>
.sk-1d0hoyi-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet 1600ms linear 0ms infinite normal both;
}
.sk-1d0hoyi-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet 1600ms linear 0ms infinite normal both;
}
.sk-1d0hoyi-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet 1600ms linear 0ms infinite normal both;
}
.sk-1d0hoyi-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet 1600ms linear 0ms infinite normal both;
}
@keyframes sk-1d0hoyi-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1d0hoyi * {
    animation: none;
  }
  .sk-1d0hoyi-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1d0hoyi-1 {
    stroke-dasharray: none;
  }
  .sk-1d0hoyi-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1d0hoyi-3 {
    stroke-dasharray: none;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" class="sk-1d0hoyi-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-1d0hoyi-1"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10" pathLength="1" class="sk-1d0hoyi-1"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" class="sk-1d0hoyi-2"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-1d0hoyi-3"/></svg>
"
`;

exports[`exporters.css × every preset > comet × simple-stroke.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-fd5v37" role="img" aria-label="Logo"><style>
.sk-fd5v37-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.2 0.8;
  animation: sk-fd5v37-t0-comet 1600ms linear 0ms infinite normal both;
}
@keyframes sk-fd5v37-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-fd5v37 * {
    animation: none;
  }
  .sk-fd5v37-0 {
    stroke-dasharray: none;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" pathLength="1" class="sk-fd5v37-0"/><path d="M36 64 L56 84 L88 40" pathLength="1" class="sk-fd5v37-0"/></g></svg>
"
`;

exports[`exporters.css × every preset > draw-fill × illustrator-classes.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-2vod6w" role="img" aria-label="Logo"><style>
.sk-2vod6w-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
.sk-2vod6w-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
.sk-2vod6w-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
.sk-2vod6w-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
@keyframes sk-2vod6w-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-2vod6w * {
    animation: none;
  }
  .sk-2vod6w-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-3 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" class="sk-2vod6w-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-2vod6w-1"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10" pathLength="1" class="sk-2vod6w-1"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" class="sk-2vod6w-2"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-2vod6w-3"/></svg>
"
`;

exports[`exporters.css × every preset > draw-fill × simple-stroke.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-1kk6it" role="img" aria-label="Logo"><style>
.sk-1kk6it-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-1kk6it-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
@keyframes sk-1kk6it-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1kk6it * {
    animation: none;
  }
  .sk-1kk6it-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" pathLength="1" class="sk-1kk6it-0"/><path d="M36 64 L56 84 L88 40" pathLength="1" class="sk-1kk6it-0"/></g></svg>
"
`;

exports[`exporters.css × every preset > fade × illustrator-classes.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-1m7e46k" role="img" aria-label="Logo"><style>
.sk-1m7e46k-0 {
  animation: sk-1m7e46k-t0-fade 900ms ease-out 0ms 1 normal both;
}
@keyframes sk-1m7e46k-t0-fade {
  0% {
    opacity: 0;
    transform: translate(0px, 8px);
  }
  100% {
    opacity: 1;
    transform: translate(0px, 0px);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1m7e46k * {
    animation: none;
  }
  .sk-1m7e46k-0 {
    opacity: 1;
    transform: none;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" class="sk-1m7e46k-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10" class="sk-1m7e46k-0"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10" class="sk-1m7e46k-0"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" class="sk-1m7e46k-0"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10" class="sk-1m7e46k-0"/></svg>
"
`;

exports[`exporters.css × every preset > fade × simple-stroke.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-q6wj0z" role="img" aria-label="Logo"><style>
.sk-q6wj0z-0 {
  animation: sk-q6wj0z-t0-fade 900ms ease-out 0ms 1 normal both;
}
@keyframes sk-q6wj0z-t0-fade {
  0% {
    opacity: 0;
    transform: translate(0px, 9.6px);
  }
  100% {
    opacity: 1;
    transform: translate(0px, 0px);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-q6wj0z * {
    animation: none;
  }
  .sk-q6wj0z-0 {
    opacity: 1;
    transform: none;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" class="sk-q6wj0z-0"/><path d="M36 64 L56 84 L88 40" class="sk-q6wj0z-0"/></g></svg>
"
`;

exports[`exporters.css × every preset > march × illustrator-classes.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-1m4q023" role="img" aria-label="Logo"><style>
.sk-1m4q023-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march 800ms linear 0ms infinite normal both;
}
.sk-1m4q023-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march 800ms linear 0ms infinite normal both;
}
.sk-1m4q023-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march 800ms linear 0ms infinite normal both;
}
.sk-1m4q023-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march 800ms linear 0ms infinite normal both;
}
@keyframes sk-1m4q023-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1m4q023 * {
    animation: none;
  }
  .sk-1m4q023-0 {
    fill-opacity: 1;
  }
  .sk-1m4q023-2 {
    fill-opacity: 1;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" class="sk-1m4q023-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-1m4q023-1"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10" pathLength="1" class="sk-1m4q023-1"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" class="sk-1m4q023-2"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-1m4q023-3"/></svg>
"
`;

exports[`exporters.css × every preset > march × simple-stroke.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-cjkjvo" role="img" aria-label="Logo"><style>
.sk-cjkjvo-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-cjkjvo-t0-march 800ms linear 0ms infinite normal both;
}
@keyframes sk-cjkjvo-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-cjkjvo * {
    animation: none;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" pathLength="1" class="sk-cjkjvo-0"/><path d="M36 64 L56 84 L88 40" pathLength="1" class="sk-cjkjvo-0"/></g></svg>
"
`;

exports[`exporters.css × every preset > pulse × illustrator-classes.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-1dlywms" role="img" aria-label="Logo"><style>
.sk-1dlywms-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-1dlywms-t0-pulse 1400ms ease-in-out 0ms infinite normal both;
}
@keyframes sk-1dlywms-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1dlywms * {
    animation: none;
  }
  .sk-1dlywms-0 {
    opacity: 1;
    transform: none;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" class="sk-1dlywms-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10" class="sk-1dlywms-0"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10" class="sk-1dlywms-0"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" class="sk-1dlywms-0"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10" class="sk-1dlywms-0"/></svg>
"
`;

exports[`exporters.css × every preset > pulse × simple-stroke.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-qlcd7t" role="img" aria-label="Logo"><style>
.sk-qlcd7t-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-qlcd7t-t0-pulse 1400ms ease-in-out 0ms infinite normal both;
}
@keyframes sk-qlcd7t-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-qlcd7t * {
    animation: none;
  }
  .sk-qlcd7t-0 {
    opacity: 1;
    transform: none;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" class="sk-qlcd7t-0"/><path d="M36 64 L56 84 L88 40" class="sk-qlcd7t-0"/></g></svg>
"
`;

exports[`exporters.css × every preset > yoyo × illustrator-classes.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-1xkr75m" role="img" aria-label="Logo"><style>
.sk-1xkr75m-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo 1200ms ease-in-out 0ms infinite alternate both;
}
.sk-1xkr75m-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo 1200ms ease-in-out 0ms infinite alternate both;
}
.sk-1xkr75m-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo 1200ms ease-in-out 0ms infinite alternate both;
}
.sk-1xkr75m-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo 1200ms ease-in-out 0ms infinite alternate both;
}
@keyframes sk-1xkr75m-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1xkr75m * {
    animation: none;
  }
  .sk-1xkr75m-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1xkr75m-1 {
    stroke-dasharray: none;
  }
  .sk-1xkr75m-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1xkr75m-3 {
    stroke-dasharray: none;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" class="sk-1xkr75m-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-1xkr75m-1"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10" pathLength="1" class="sk-1xkr75m-1"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" class="sk-1xkr75m-2"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10" pathLength="1" class="sk-1xkr75m-3"/></svg>
"
`;

exports[`exporters.css × every preset > yoyo × simple-stroke.svg 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-1b7jnm9" role="img" aria-label="Logo"><style>
.sk-1b7jnm9-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.25 1;
  animation: sk-1b7jnm9-t0-yoyo 1200ms ease-in-out 0ms infinite alternate both;
}
@keyframes sk-1b7jnm9-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1b7jnm9 * {
    animation: none;
  }
  .sk-1b7jnm9-0 {
    stroke-dasharray: none;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" pathLength="1" class="sk-1b7jnm9-0"/><path d="M36 64 L56 84 L88 40" pathLength="1" class="sk-1b7jnm9-0"/></g></svg>
"
`;
